--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <div class="container-nav-links">
                 <a href="#">
                 <div class="heating">
-                    <img src="images/heating.png" class="nav-img-width"/>
+                    <img src="images/heating.png" class="nav-img-width" alt="heat-image"/>
                     <p>Heating</p>
                 </div>
                 </a>
                 <a href="#">
                 <div class="cooling">
-                    <img src="images/cooling.png" class="nav-img-width"/>
+                    <img src="images/cooling.png" class="nav-img-width" alt="cooling-image"/>
                     <p>Cooling</p>
                 </div>
                 </a>
                 <a href="#">
                 <div class="specials">
-                    <img src="images/specials.png" class="nav-img-width"/>
+                    <img src="images/specials.png" class="nav-img-width" alt="specials-image"/>
                     <p>Specials</p>
                 </div>
                 </a>
                 <a href="#">
                 <div class="plumber">
-                    <img src="images/plumber-arlington-tx.png" class="nav-img-width"/>
+                    <img src="images/plumber-arlington-tx.png" class="nav-img-width" alt="plumber-image"/>
                     <p>For Plumbing</p>
                 </div>
                 </a>
@@ -56,7 +56,7 @@
         <div>
             <h1>Our Service Area</h1>
             <div class="service-content">
-            <div class="service-img"><img src="images/our-service-area.jpg" class="article-img"/></div>
+            <div class="service-img"><img src="images/our-service-area.jpg" class="article-img" alt="service-image"/></div>
             <div class="service-text"><p>Minuteman Heating & Air serves Fort Worth, Arlington, Aleda, Alvarado and the surrounding areas with first
                 quality services you van rely upon. Our certified technitians have the experience necessary to ensure a professional repair, installation and maintenance of your <strong>heating and air conditioning</strong> system,
                 and the skills neaded to ensure the job is done right the first time. You are our first priority,a nd we are dedicated to your confort and satisfaction. Contact us today to schedule your service, or s free estimate
@@ -77,7 +77,7 @@
             <h2>Helpful Heating and Air Articles</h2>
             <div class="article-section">
             <div class="article-content">
-            <img src="images/The-Value-of-Design-and-Right-Sizing-by-Arlington-HVAC-Contractors.jpg" class="article-img"/>
+            <img src="images/The-Value-of-Design-and-Right-Sizing-by-Arlington-HVAC-Contractors.jpg" class="article-img" alt="helpful-image"/>
             <p><span class="text-height">Before the not-so-cold winter arrived in Arlington this year, we were looking at the importance of heating, ventilation, and air conditioning (HVAC) contractors. In this...
             </span>
                 <br><br>
@@ -85,14 +85,14 @@
             </p>
             </div>
             <div class="article-content">
-                <img src="images/Arlington-HVAC-Tips-for-Uneven-Heat.jpg" class="article-img"/>
+                <img src="images/Arlington-HVAC-Tips-for-Uneven-Heat.jpg" class="article-img" alt="helpful-image"/>
                 <p><span class="text-height">Uneven heat. It may be the No. 1 complaint among Arlington homeowners all winter, no matter how cold it is. Many people who have multi-level...
                 </span><br><br>
                     <a href="#">Read More</a>
                 </p>
             </div>
             <div class="article-content">
-                <img src="images/Arlington-HVAC-Tips-for-Troubleshooting-Furnaces.jpg" class="article-img"/>
+                <img src="images/Arlington-HVAC-Tips-for-Troubleshooting-Furnaces.jpg" class="article-img" alt="helpful-image"/>
                 <p><span class="text-height">Fortunately for Arlington homeowners, the winter of 2016 has been,for the most part, pretty darn warm (knock on wood). There's still some cold days...
                 </span><br><br>
                     <a href="#">Read More</a>
