--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         </div>
         <div class="container-map">       
             <div>
-                <img src="images/sub_map.jpg" class="map"/>
+            <!-- live map test
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d384194.2956533459!2d-97.20818481626954!3d32.68358312594292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x864e62d2e40898d3%3A0xb5ef6ac1fa05351!2sArlington%2C%20TX%2C%20USA!3m2!1d32.735687!2d-97.10806559999999!4m0!5e0!3m2!1sen!2sza!4v1733415130766!5m2!1sen!2sza" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            -->
+                <a href="https://maps.app.goo.gl/CeRCDrNssN3SbxQW6" target="_blank"><img src="images/sub_map.jpg" class="map"/></a>
             </div>
         </div>
     </container>
@@ -77,7 +80,7 @@
             <h2>Helpful Heating and Air Articles</h2>
             <div class="article-section">
             <div class="article-content">
-            <img src="images/The-Value-of-Design-and-Right-Sizing-by-Arlington-HVAC-Contractors.jpg" class="article-img" alt="helpful-image"/>
+            <a href="#"><img src="images/The-Value-of-Design-and-Right-Sizing-by-Arlington-HVAC-Contractors.jpg" class="article-img" alt="helpful-image"/></a>
             <p><span class="text-height">Before the not-so-cold winter arrived in Arlington this year, we were looking at the importance of heating, ventilation, and air conditioning (HVAC) contractors. In this...
             </span>
                 <br><br>
@@ -85,14 +88,14 @@
             </p>
             </div>
             <div class="article-content">
-                <img src="images/Arlington-HVAC-Tips-for-Uneven-Heat.jpg" class="article-img" alt="helpful-image"/>
+                <a href="#"><img src="images/Arlington-HVAC-Tips-for-Uneven-Heat.jpg" class="article-img" alt="helpful-image"/></a>
                 <p><span class="text-height">Uneven heat. It may be the No. 1 complaint among Arlington homeowners all winter, no matter how cold it is. Many people who have multi-level...
                 </span><br><br>
                     <a href="#">Read More</a>
                 </p>
             </div>
             <div class="article-content">
-                <img src="images/Arlington-HVAC-Tips-for-Troubleshooting-Furnaces.jpg" class="article-img" alt="helpful-image"/>
+                <a href="#"><img src="images/Arlington-HVAC-Tips-for-Troubleshooting-Furnaces.jpg" class="article-img" alt="helpful-image"/></a>
                 <p><span class="text-height">Fortunately for Arlington homeowners, the winter of 2016 has been,for the most part, pretty darn warm (knock on wood). There's still some cold days...
                 </span><br><br>
                     <a href="#">Read More</a>
