--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
 <title>Bionic Assesment</title>
+<meta name="description" content="Assesment for Bionic Position">
+<meta name="keywords" content="HTML, CSS,">
+<meta name="author" content="Alie">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="/images/fav.ico">
+
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
