--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <a href="#">Read more</a>
             </p>
             </div>
-            <div class="article-content">
+            <div class="article-content plr">
                 <a href="#"><img src="images/Arlington-HVAC-Tips-for-Uneven-Heat.jpg" class="article-img" alt="helpful-image"/></a>
                 <p><span class="text-height">Uneven heat. It may be the No. 1 complaint among Arlington homeowners all winter, no matter how cold it is. Many people who have multi-level...
                 </span><br><br>
